<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/Accueil"

       />
    <item
        android:id="@+id/favoris"
        android:icon="@drawable/ic_favoris"
        android:title="@string/Favoris"

        />

    <item android:id="@+id/placeholder"
        android:title="" />


    <item
        android:id="@+id/notif"
        android:icon="@drawable/ic_notification"
        android:title="@string/Notifications"


        />


    <item
        android:id="@+id/profil"
        android:icon="@drawable/ic_user"
        android:title="@string/Profil"

        />

</menu>