<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/linearlayout"
    tools:context=".register">

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/arrow_left"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_arrow_left"
        android:layout_marginLeft="20dp"
        app:tint="@color/purple_700"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_stock_24_logo"
        android:layout_marginTop="-15dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/register"
        android:textSize="25dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/teal_200"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/simple"
        android:textSize="15sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/teal_200"
        android:gravity="center"
        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login"
     android:layout_width="match_parent"
     android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15sp"
     android:paddingBottom="10dp"
     android:paddingTop="10dp" />



    <com.google.android.gms.common.SignInButton

        android:id="@+id/gmail_login"
        android:layout_below="@id/facebook_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:elevation="3dp"
        android:layout_marginTop="10dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

    <View

        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="#F8F8F8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_phone"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="#F8F8F8"/>

    </LinearLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#414047"
        android:text="@string/connexion_info"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:layout_marginLeft="30dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:gravity="bottom"

                    />

            </com.google.android.material.textfield.TextInputLayout>









    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#414047"
        android:text="@string/profil_info"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:layout_marginLeft="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:gravity="bottom"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="bottom"

            />

    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:gravity="bottom"
                    />

            </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/checkbox"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/condition"
        android:fontFamily="@font/roboto"
        android:textColor="@color/teal_200"
        android:textSize="12sp"
        android:layout_marginHorizontal="30dp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto"
        android:background="@drawable/button1"/>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#FAFAFA"
        android:elevation="3dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:fontFamily="@font/roboto"
            android:textColor="#3D3C43"
            android:text="@string/compte_existe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
             android:id="@+id/to_login"
             android:layout_marginLeft="20dp"
             android:fontFamily="@font/roboto"
             android:textColor="@color/purple_200"
             android:text="@string/connect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"/>


        </LinearLayout>

    </LinearLayout>
    </ScrollView>


</LinearLayout>